add demo-page dependency

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <link rel="import" href="./bower_components/components-font-awesome/css/font-awesome.min.css">
   <link rel="import" href="./bower_components/iron-ajax/iron-ajax.html">
   <!--<link rel="import" href="./bower_components/iron-image/iron-image.html">-->
-  <!--<link rel="import" href="./bower_components/paper-styles/demo-pages.html">-->
+  <link rel="import" href="./bower_components/paper-styles/demo-pages.html">
   <link rel="import" href="./elements/pdf-reader.html">
 
 </head>
