--- a/app/elements/pdf-reader.html
+++ b/app/elements/pdf-reader.html
@@ -69,8 +69,8 @@
         border: 1px solid #eeeeee;
       }
 
-      .pdf-disabled {
-        color: #4d4d4d;
+      .pdf-disabled, .pdf-hidden {
+        color: #666666;
       }
       .pdf-zoom-lvl{
         background-color: #686868;
