--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,14 @@
 
   <script src="./bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="import" href="./bower_components/components-font-awesome/css/font-awesome.min.css">
+  <link rel="import" href="./bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="import" href="./bower_components/iron-ajax/iron-ajax.html">
-  <!--<link rel="import" href="./bower_components/iron-image/iron-image.html">-->
+  <link rel="import" href="./bower_components/paper-button/paper-button.html">
   <link rel="import" href="./bower_components/paper-styles/demo-pages.html">
+
   <link rel="import" href="./elements/pdf-reader.html">
+  <link rel="import" href="./elements/pdf-list.html">
+  <link rel="import" href="./elements/pdf-element.html">
 
 </head>
 <body>
@@ -18,7 +21,7 @@
 
 <div class="horizontal-section-container">
   <template is="dom-bind" id="app">
-    <pdf-reader src="./pdf.pdf" width=720 height=800></pdf-reader>
+    <pdf-element></pdf-element>
   </template>
 </div>
 </body>
