--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Poly-PDF reader</title>
+  <title>PDF element</title>
 
   <script src="./bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
