--- a/app/elements/pdf-element.html
+++ b/app/elements/pdf-element.html
@@ -9,7 +9,8 @@
   </style>
   <template>
     <div class="header"><pdf-list selected-pdf="{{selectedPdf}}"></pdf-list></div>
-    <pdf-reader src="{{selectedPdf}}" width=720 height=800></pdf-reader>
+    <pdf-reader src="../pdf.pdf" width=720 height=800></pdf-reader>
+    <pdf-reader src="{{selectedPdf.path}}" width=720 height=800></pdf-reader>
   </template>
 
   <script>
