--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           }
         </script>
       </template>
+      <script>
+        window.onload = function() {
+          document.querySelector("#one").addEventListener("click", function() {
+            document.getElementById("pdf").setAttribute("src", "../pdf.pdf");
+          });
+          document.querySelector("#another").addEventListener("click", function() {
+            document.getElementById("pdf").setAttribute("src", "../example.pdf");
+          });
+        }
+      </script>
 
     </demo-snippet>
   </div>
