--- a/demo/index.html
+++ b/demo/index.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <h3>PDF-element</h3>
     <demo-snippet class="centered-demo">
       <template>
-        <pdf-element src="../example.pdf" elevation="5" downloadable show-file-name width=800 height=600></pdf-element>
+        <pdf-element src="./example.pdf" elevation="5" downloadable show-file-name width=800 height=600></pdf-element>
       </template>
     </demo-snippet>
   </div>
@@ -52,14 +52,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template>
         <paper-button raised id="one">PDF One</paper-button>
         <paper-button raised id="another">PDF Two</paper-button>
-        <pdf-element id="pdf" src="../pdf.pdf" width=800 height=600></pdf-element>
+        <pdf-element id="pdf" src="./pdf.pdf" width=800 height=600></pdf-element>
         <script>
           window.onload = function() {
             document.querySelector("#one").addEventListener("click", function() {
-              document.getElementById("pdf").setAttribute("src", "../pdf.pdf");
+              document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
             });
             document.querySelector("#another").addEventListener("click", function() {
-              document.getElementById("pdf").setAttribute("src", "../example.pdf");
+              document.getElementById("pdf").setAttribute("src", "./example.pdf");
             });
           }
         </script>
@@ -67,10 +67,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <script>
         window.onload = function() {
           document.querySelector("#one").addEventListener("click", function() {
-            document.getElementById("pdf").setAttribute("src", "../pdf.pdf");
+            document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
           });
           document.querySelector("#another").addEventListener("click", function() {
-            document.getElementById("pdf").setAttribute("src", "../example.pdf");
+            document.getElementById("pdf").setAttribute("src", "./example.pdf");
           });
         }
       </script>
