Fix of missed src attr problem

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,7 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template>
         <paper-button raised id="one">PDF One</paper-button>
         <paper-button raised id="another">PDF Two</paper-button>
-        <pdf-element id="pdf" show-spinner src="./pdf.pdf" width=800 height=600></pdf-element>
+        <pdf-element id="pdf" show-spinner  width=800 height=600></pdf-element>
         <script>
           window.onload = function() {
             document.querySelector("#one").addEventListener("click", function() {
