--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>PDF-element Demo</title>
   <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../paper-button/paper-button.html">
@@ -36,17 +37,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 
 <body unresolved>
-
   <div class="vertical-section-container centered">
     <h3>PDF-element</h3>
     <demo-snippet class="centered-demo">
       <template>
-        <pdf-element src="./example.pdf"
+          <pdf-element src="./example.pdf"
                      elevation="5"
                      downloadable
                      show-file-name
-                     enable-text-selection
-                     width=800 height=600></pdf-element>
+                     enable-text-selection></pdf-element>
       </template>
     </demo-snippet>
   </div>
@@ -57,18 +56,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template>
         <paper-button raised id="one">PDF One</paper-button>
         <paper-button raised id="another">PDF Two</paper-button>
-        <pdf-element id="pdf" show-spinner width=800 height=600></pdf-element>
-      </template>
-      <script>
-        window.onload = function() {
+        <pdf-element id="pdf" show-spinner></pdf-element>
+        <script>
           document.querySelector("#one").addEventListener("click", function() {
             document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
           });
           document.querySelector("#another").addEventListener("click", function() {
             document.getElementById("pdf").setAttribute("src", "./example.pdf");
           });
-        }
-      </script>
+        </script>
+      </template>
 
     </demo-snippet>
   </div>
