--- a/pdf-element.html
+++ b/pdf-element.html
@@ -125,7 +125,7 @@ Another awesome feature is dynamically load PDF file. So you can change the `src
 
     <paper-material elevation="{{elevation}}">
       <div class="card-content">
-        <paper-card>
+        <paper-card style="width: 100%">
 
           <div class="pdf-viewer">
             <paper-toolbar class="pdf-toolbar">
