--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <link rel="import" href="../pdf-element.html">
 
-  <style is="custom-style" >
+  <style is="custom-style">
     .vertical-section-container {
       max-width: 900px;
     }
@@ -38,40 +38,56 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <body unresolved>
 
-  <div class="vertical-section-container centered">
-    <h3>PDF-element</h3>
-    <demo-snippet class="centered-demo">
-      <template>
-        <pdf-element src="./example.pdf"
-                     elevation="5"
-                     downloadable
-                     height="900"
-                     show-file-name
-                     enable-text-selection></pdf-element>
-      </template>
-    </demo-snippet>
-  </div>
+<div class="vertical-section-container centered">
+  <h3>PDF-element</h3>
+  <demo-snippet class="centered-demo">
+    <template>
+      <pdf-element src="./example.pdf"
+                   elevation="5"
+                   downloadable
+                   height="900"
+                   show-file-name
+                   enable-text-selection></pdf-element>
+    </template>
+  </demo-snippet>
+</div>
 
-  <div class="vertical-section-container centered">
-    <h3>Dynamically change PDF source</h3>
-    <demo-snippet class="centered-demo">
-      <template>
-        <paper-button raised id="one">PDF One</paper-button>
-        <paper-button raised id="another">PDF Two</paper-button>
-        <pdf-element id="pdf" show-spinner></pdf-element>
-        <script>
-          document.querySelector("#one").addEventListener("click", function() {
-            document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
-          });
-          document.querySelector("#another").addEventListener("click", function() {
-            document.getElementById("pdf").setAttribute("src", "./example.pdf");
-          });
-        </script>
-      </template>
+<div class="vertical-section-container centered">
+  <h3>Dynamically change PDF source</h3>
+  <demo-snippet class="centered-demo">
+    <template>
+      <paper-button raised id="one">PDF One</paper-button>
+      <paper-button raised id="another">PDF Two</paper-button>
+      <pdf-element id="pdf" show-spinner></pdf-element>
+      <script>
+        document.querySelector("#one").addEventListener("click", function () {
+          document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
+        });
+        document.querySelector("#another").addEventListener("click", function () {
+          document.getElementById("pdf").setAttribute("src", "./example.pdf");
+        });
+      </script>
+    </template>
 
-    </demo-snippet>
-  </div>
+  </demo-snippet>
+</div>
 
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+              (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+  ga('create', 'UA-57641651-2', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 
 </html>
