Added import for paper-icon-button

--- a/pdf-element.html
+++ b/pdf-element.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../paper-input/paper-input.html">
 <link rel="import" href="../iron-input/iron-input.html">
 <link rel="import" href="../paper-spinner/paper-spinner.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <script src="../pdfjs-dist/web/compatibility.js"></script>
 <script src="../pdfjs-dist/build/pdf.js"></script>
