Set reflectToAttribute on src property

--- a/pdf-element.html
+++ b/pdf-element.html
@@ -167,7 +167,7 @@ Another awesome feature is dynamically load PDF file. So you can change the `src
          */
         src: {
           type: String,
-          notify: true
+          reflectToAttribute: true
         },
         /**
          * The z-depth of this element, from 0-5. Setting to 0 will remove the shadow, and each increasing number greater than 0 will be "deeper" than the last.
