--- a/demo/index.html
+++ b/demo/index.html
@@ -1,77 +1,64 @@
 <!doctype html>
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>PDF-element Demo</title>
-  <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <title>pdf-element demo</title>
 
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../../iron-ajax/iron-ajax.html">
-  <link rel="import" href="../../iron-image/iron-image.html">
-  <link rel="import" href="../../paper-styles/demo-pages.html">
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-  <link rel="import" href="../pdf-element.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../../paper-button/paper-button.html">
+    <link rel="import" href="../../iron-ajax/iron-ajax.html">
+    <link rel="import" href="../../iron-image/iron-image.html">
+    <link rel="import" href="../../paper-styles/demo-pages.html">
+    <link rel="import" href="../pdf-element.html">
 
-  <style is="custom-style">
-    .vertical-section-container {
-      max-width: 900px;
-    }
+    <style is="custom-style" include="demo-pages-shared-styles">
+      .vertical-section-container {
+        max-width: 900px;
+      }
 
-    paper-button {
-      margin: 10px;
-    }
-  </style>
-</head>
+      paper-button {
+        margin: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="vertical-section-container centered">
+      <h3>Basic pdf-element demo</h3>
+      <demo-snippet>
+        <template>
+          <pdf-element src="./example.pdf"
+                       elevation="5"
+                       downloadable
+                       height="900"
+                       show-file-name
+                       enable-text-selection></pdf-element>
+        </template>
+      </demo-snippet>
+    </div>
 
-<body unresolved>
+    <div class="vertical-section-container centered">
+      <h3>Dynamically change PDF source</h3>
+      <demo-snippet class="centered-demo">
+        <template>
+          <paper-button raised id="one">PDF One</paper-button>
+          <paper-button raised id="another">PDF Two</paper-button>
+          <pdf-element id="pdf" show-spinner></pdf-element>
+          <script>
+            document.querySelector("#one").addEventListener("click", function () {
+              document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
+            });
+            document.querySelector("#another").addEventListener("click", function () {
+              document.getElementById("pdf").setAttribute("src", "./example.pdf");
+            });
+          </script>
+        </template>
 
-<div class="vertical-section-container centered">
-  <h3>PDF-element</h3>
-  <demo-snippet class="centered-demo">
-    <template>
-      <pdf-element src="./example.pdf"
-                   elevation="5"
-                   downloadable
-                   height="900"
-                   show-file-name
-                   enable-text-selection></pdf-element>
-    </template>
-  </demo-snippet>
-</div>
-
-<div class="vertical-section-container centered">
-  <h3>Dynamically change PDF source</h3>
-  <demo-snippet class="centered-demo">
-    <template>
-      <paper-button raised id="one">PDF One</paper-button>
-      <paper-button raised id="another">PDF Two</paper-button>
-      <pdf-element id="pdf" show-spinner></pdf-element>
-      <script>
-        document.querySelector("#one").addEventListener("click", function () {
-          document.getElementById("pdf").setAttribute("src", "./pdf.pdf");
-        });
-        document.querySelector("#another").addEventListener("click", function () {
-          document.getElementById("pdf").setAttribute("src", "./example.pdf");
-        });
-      </script>
-    </template>
-
-  </demo-snippet>
-</div>
-
-</body>
-
+      </demo-snippet>
+    </div>
+  </body>
 </html>
